@@ -11,20 +11,44 @@
 /**
  * Parses a mail in RFC822 format to an ezcMail structure.
  *
- * If you want to use your own mail class (extended from {@link ezcMail}),
+ * By default an object of class {@link ezcMail} is returned by the parser. If
+ * you want to use your own mail class (which extends {@link ezcMail}),
  * use {@link ezcMailParserOption}. Example:
+ *
  * <code>
  * $options = new ezcMailParserOptions();
- * $options->mailClass = 'MyMailClass';
+ * $options->mailClass = 'myCustomMailClass'; // extends ezcMail
  *
  * $parser = new ezcMailParser( $options );
- * // if you want to use MyMailClass which extends ezcMail
  * </code>
+ *
+ * Another way to do this is:
+ * <code>
+ * $parser = new ezcMailParser();
+ * $parser->options->mailClass = 'myCustomMailClass'; // extends ezcMail
+ * <code>
  *
  * File attachments will be written to disk in a temporary directory.
  * This temporary directory and the file attachment will be removed
  * when PHP ends execution. If you want to keep the file you should move it
  * to another directory.
+ *
+ * By default objects of class {@link ezcMailFile} are created to handle file
+ * attachments. If you want to use your own file class (which extends
+ * {@link ezcMailFile}), use {@link ezcMailParserOption}. Example:
+ *
+ * <code>
+ * $options = new ezcMailParserOptions();
+ * $options->fileClass = 'myCustomFileClass'; // extends ezcMailFile
+ *
+ * $parser = new ezcMailParser( $options );
+ * </code>
+ *
+ * Another way to do this is:
+ * <code>
+ * $parser = new ezcMailParser();
+ * $parser->options->fileClass = 'myCustomFileClass'; // extends ezcMailFile
+ * <code>
  *
  * @property ezcMailParserOptions $options
  *           Holds the options you can set to the mail parser.
